Moved center-horizontally to a mixin in foundations.less. Removed inputs dependency to layout

--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -176,3 +176,19 @@ TODO: This is just a short example, needs to be completed when colors are confir
 <div style="margin-bottom: 5px; background:#363636">menu: #363636</div>
 ```
 */
+
+/*
+**************************************************************************
+# Mixins
+
+/*
+`.center-horizontally` centers the container by making the browser to calculate left and right margins automatically.
+
+```markup
+<div class="center-horizontally" style="background:gray;max-width:100px;">&nbsp;</div>
+```
+*/
+.center-horizontally() {
+  margin-left: auto;
+  margin-right: auto;
+}
